--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -970,7 +970,9 @@
    ],
    "source": [
     "nasa_news_title = NASA_soup.find(\"div\", class_=\"content_title\").text\n",
-    "print(nasa_news_title)\n"
+    "print(nasa_news_title)\n",
+    "\n",
+    "# This doesn't get the correct item...\n"
    ]
   },
   {
