Made hemisphere image scraping more elegant with a for loop

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -11320,13 +11320,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemispheres = [\"Cerberus\", \"Schiaparelli\", \"Syrtis\", \"Valles\"]\n",
+    "hemisphere_partial_urls = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "browser = Browser('chrome', **executable_path, headless=False)\n",
     "time.sleep(3)\n",
-    "browser.visit(usgs_astro_base_url)"
+    "browser.visit(usgs_astro_base_url)\n",
+    "time.sleep(3)"
    ]
   },
   {
@@ -11338,6 +11349,77 @@
     "# usgs_response = requests.get(\"https://astrogeology.usgs.gov/search/map/Mars/Viking/cerberus_enhanced\")\n",
     "# cerberus_soup = bs(twitter_response.text, \"html.parser\")\n",
     "# print(cerberus_soup.prettify())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg\n",
+      "/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg\n",
+      "/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg\n",
+      "/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<bound method BaseWebDriver.quit of <splinter.driver.webdriver.chrome.WebDriver object at 0x000001B361B2E630>>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for hemisphere in hemispheres:\n",
+    "    try:\n",
+    "        browser.click_link_by_partial_text(hemisphere)\n",
+    "        time.sleep(3)\n",
+    "        browser.click_link_by_partial_text(\"Open\")\n",
+    "        time.sleep(3)\n",
+    "\n",
+    "        html = browser.html\n",
+    "        soup = bs(html, 'html.parser')\n",
+    "        image_data = soup.find(\"img\", class_=\"wide-image\")\n",
+    "        img_link = cerberus_data[\"src\"]\n",
+    "        hemisphere_partial_urls.append(img_link)\n",
+    "        print(img_link)\n",
+    "        # Reset to homepage\n",
+    "        browser.visit(usgs_astro_base_url)\n",
+    "        time.sleep(3)\n",
+    "    except e as Error:\n",
+    "        print(\"Something went wrong\")\n",
+    "browser.quit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg',\n",
+       " '/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg',\n",
+       " '/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg',\n",
+       " '/cache/images/cfa62af2557222a02478f1fcd781d445_cerberus_enhanced.tif_full.jpg']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemisphere_partial_urls"
    ]
   },
   {
@@ -11368,62 +11450,62 @@
     }
    ],
    "source": [
-    "browser.click_link_by_partial_text(\"Cerberus\")\n",
-    "time.sleep(3)\n",
-    "browser.click_link_by_partial_text(\"Open\")\n",
-    "time.sleep(3)\n",
+    "# browser.click_link_by_partial_text(\"Cerberus\")\n",
+    "# time.sleep(3)\n",
+    "# browser.click_link_by_partial_text(\"Open\")\n",
+    "# time.sleep(3)\n",
     "\n",
-    "html = browser.html\n",
-    "soup = bs(html, 'html.parser')\n",
-    "cerberus_data = soup.find(\"img\", class_=\"wide-image\")\n",
-    "cerberus_img_link = cerberus_data[\"src\"]\n",
-    "print(cerberus_img_link)\n",
-    "# Reset to homepage\n",
-    "browser.visit(usgs_astro_base_url)\n",
-    "time.sleep(3)\n",
-    "#\n",
-    "browser.click_link_by_partial_text(\"Schiaparelli\")\n",
-    "time.sleep(3)\n",
-    "browser.click_link_by_partial_text(\"Open\")\n",
-    "time.sleep(3)\n",
+    "# html = browser.html\n",
+    "# soup = bs(html, 'html.parser')\n",
+    "# cerberus_data = soup.find(\"img\", class_=\"wide-image\")\n",
+    "# cerberus_img_link = cerberus_data[\"src\"]\n",
+    "# print(cerberus_img_link)\n",
+    "# # Reset to homepage\n",
+    "# browser.visit(usgs_astro_base_url)\n",
+    "# time.sleep(3)\n",
+    "# #\n",
+    "# browser.click_link_by_partial_text(\"Schiaparelli\")\n",
+    "# time.sleep(3)\n",
+    "# browser.click_link_by_partial_text(\"Open\")\n",
+    "# time.sleep(3)\n",
     "\n",
-    "html = browser.html\n",
-    "soup = bs(html, 'html.parser')\n",
-    "schiaparelli_data = soup.find(\"img\", class_=\"wide-image\")\n",
-    "schiaparelli_img_link = schiaparelli_data[\"src\"]\n",
-    "print(schiaparelli_img_link)\n",
+    "# html = browser.html\n",
+    "# soup = bs(html, 'html.parser')\n",
+    "# schiaparelli_data = soup.find(\"img\", class_=\"wide-image\")\n",
+    "# schiaparelli_img_link = schiaparelli_data[\"src\"]\n",
+    "# print(schiaparelli_img_link)\n",
     "\n",
-    "# Reset to homepage\n",
-    "browser.visit(usgs_astro_base_url)\n",
-    "time.sleep(3)\n",
-    "#\n",
-    "browser.click_link_by_partial_text(\"Syrtis\")\n",
-    "time.sleep(3)\n",
-    "browser.click_link_by_partial_text(\"Open\")\n",
-    "time.sleep(3)\n",
+    "# # Reset to homepage\n",
+    "# browser.visit(usgs_astro_base_url)\n",
+    "# time.sleep(3)\n",
+    "# #\n",
+    "# browser.click_link_by_partial_text(\"Syrtis\")\n",
+    "# time.sleep(3)\n",
+    "# browser.click_link_by_partial_text(\"Open\")\n",
+    "# time.sleep(3)\n",
     "\n",
-    "html = browser.html\n",
-    "soup = bs(html, 'html.parser')\n",
-    "syrtis_data = soup.find(\"img\", class_=\"wide-image\")\n",
-    "syrtis_img_link = syrtis_data[\"src\"]\n",
-    "print(syrtis_img_link)\n",
+    "# html = browser.html\n",
+    "# soup = bs(html, 'html.parser')\n",
+    "# syrtis_data = soup.find(\"img\", class_=\"wide-image\")\n",
+    "# syrtis_img_link = syrtis_data[\"src\"]\n",
+    "# print(syrtis_img_link)\n",
     "\n",
-    "# Reset to homepage\n",
-    "browser.visit(usgs_astro_base_url)\n",
-    "time.sleep(3)\n",
-    "#\n",
-    "browser.click_link_by_partial_text(\"Valles\")\n",
-    "time.sleep(3)\n",
-    "browser.click_link_by_partial_text(\"Open\")\n",
-    "time.sleep(3)\n",
+    "# # Reset to homepage\n",
+    "# browser.visit(usgs_astro_base_url)\n",
+    "# time.sleep(3)\n",
+    "# #\n",
+    "# browser.click_link_by_partial_text(\"Valles\")\n",
+    "# time.sleep(3)\n",
+    "# browser.click_link_by_partial_text(\"Open\")\n",
+    "# time.sleep(3)\n",
     "\n",
-    "html = browser.html\n",
-    "soup = bs(html, 'html.parser')\n",
-    "valles_data = soup.find(\"img\", class_=\"wide-image\")\n",
-    "valles_img_link = valles_data[\"src\"]\n",
-    "print(valles_img_link)\n",
-    "# End\n",
-    "browser.quit"
+    "# html = browser.html\n",
+    "# soup = bs(html, 'html.parser')\n",
+    "# valles_data = soup.find(\"img\", class_=\"wide-image\")\n",
+    "# valles_img_link = valles_data[\"src\"]\n",
+    "# print(valles_img_link)\n",
+    "# # End\n",
+    "# browser.quit"
    ]
   },
   {
