Cleaned up the notebook a bit

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -38,11 +38,7 @@
    "source": [
     "# Response variables for each source\n",
     "\n",
-    "# nasa_response = requests.get(nasa_mars_base_url)\n",
-    "# jpl_response = requests.get(jpl_image_base_url)\n",
-    "twitter_response = requests.get(mars_weather_twitter_base_url)\n",
-    "# facts_response = requests.get(mars_facts_base_url)\n",
-    "# usgs_response = requests.get(usgs_astro_base_url)"
+    "twitter_response = requests.get(mars_weather_twitter_base_url)\n"
    ]
   },
   {
@@ -2496,15 +2492,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# image_url_partial = browser.find_by_tag()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -2606,17 +2593,6 @@
    "metadata": {},
    "source": [
     "#### Twitter Web Scraping"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# browser = Browser('chrome', **executable_path, headless=False)\n",
-    "# time.sleep(3)\n",
-    "# browser.visit(mars_weather_twitter_base_url)"
    ]
   },
   {
@@ -10524,17 +10500,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# usgs_response = requests.get(\"https://astrogeology.usgs.gov/search/map/Mars/Viking/cerberus_enhanced\")\n",
-    "# cerberus_soup = bs(twitter_response.text, \"html.parser\")\n",
-    "# print(cerberus_soup.prettify())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [
@@ -10608,70 +10573,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# browser.click_link_by_partial_text(\"Cerberus\")\n",
-    "# time.sleep(3)\n",
-    "# browser.click_link_by_partial_text(\"Open\")\n",
-    "# time.sleep(3)\n",
-    "\n",
-    "# html = browser.html\n",
-    "# soup = bs(html, 'html.parser')\n",
-    "# cerberus_data = soup.find(\"img\", class_=\"wide-image\")\n",
-    "# cerberus_img_link = cerberus_data[\"src\"]\n",
-    "# print(cerberus_img_link)\n",
-    "# # Reset to homepage\n",
-    "# browser.visit(usgs_astro_base_url)\n",
-    "# time.sleep(3)\n",
-    "# #\n",
-    "# browser.click_link_by_partial_text(\"Schiaparelli\")\n",
-    "# time.sleep(3)\n",
-    "# browser.click_link_by_partial_text(\"Open\")\n",
-    "# time.sleep(3)\n",
-    "\n",
-    "# html = browser.html\n",
-    "# soup = bs(html, 'html.parser')\n",
-    "# schiaparelli_data = soup.find(\"img\", class_=\"wide-image\")\n",
-    "# schiaparelli_img_link = schiaparelli_data[\"src\"]\n",
-    "# print(schiaparelli_img_link)\n",
-    "\n",
-    "# # Reset to homepage\n",
-    "# browser.visit(usgs_astro_base_url)\n",
-    "# time.sleep(3)\n",
-    "# #\n",
-    "# browser.click_link_by_partial_text(\"Syrtis\")\n",
-    "# time.sleep(3)\n",
-    "# browser.click_link_by_partial_text(\"Open\")\n",
-    "# time.sleep(3)\n",
-    "\n",
-    "# html = browser.html\n",
-    "# soup = bs(html, 'html.parser')\n",
-    "# syrtis_data = soup.find(\"img\", class_=\"wide-image\")\n",
-    "# syrtis_img_link = syrtis_data[\"src\"]\n",
-    "# print(syrtis_img_link)\n",
-    "\n",
-    "# # Reset to homepage\n",
-    "# browser.visit(usgs_astro_base_url)\n",
-    "# time.sleep(3)\n",
-    "# #\n",
-    "# browser.click_link_by_partial_text(\"Valles\")\n",
-    "# time.sleep(3)\n",
-    "# browser.click_link_by_partial_text(\"Open\")\n",
-    "# time.sleep(3)\n",
-    "\n",
-    "# html = browser.html\n",
-    "# soup = bs(html, 'html.parser')\n",
-    "# valles_data = soup.find(\"img\", class_=\"wide-image\")\n",
-    "# valles_img_link = valles_data[\"src\"]\n",
-    "# print(valles_img_link)\n",
-    "# # End\n",
-    "# browser.quit"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 38,
    "metadata": {
     "scrolled": true
@@ -10707,17 +10608,6 @@
    "metadata": {},
    "source": [
     "## Step 2 - Convert Notebook to Python Script"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To Do:\n",
-    "# Get Full URLS for the hemisphere images\n",
-    "# Create MongoDB and Flask Application with Scrape function"
    ]
   }
  ],
